# ropod_navigation

ropod_navigation/: CMakeLists.txt  package.xml
route_navigation/: CMakeLists.txt  README.md  package.xml  setup.py
route_navigation/config/: navigation_goal_types.yaml  navigation_goals.yaml
route_navigation/launch/: full_software_route_navigation.launch  initial_pose_publisher.launch  route_navigation.launch  route_navigation_brsu.launch  route_navigation_hospital.launch  route_navigation_tue_hallway.launch
route_navigation/msg/: doorDetection.msg
route_navigation/ros/launch/: localisation.launch  maneuver_navigation.launch  osm_pose_updater.launch  route_navigation.launch  route_navigation_brsu.launch  route_navigation_hospital.launch  route_navigation_tue_hallway.launch
route_navigation/ros/scripts/: initial_pose_publisher  osm_pose_updater  route_navigation  route_navigation_test
route_navigation/ros/src/: corridor.cpp  corridor.h  datatypes_wm.h  elevator.cpp  elevator.h  elevator_navigation.cpp  waypoint_navigation.cpp  waypoint_navigation.h
route_navigation/ros/src/route_navigation/: route_nav_utils.py  transformations.py
route_navigation/scripts/: initial_pose_publisher  route_navigation  route_navigation_test
route_navigation/src/: datatypes_wm.h  demo_navigation.cpp  demo_navigation.h  elevator.cpp  elevator.h  elevator_navigation.cpp  elevator_navigation.h  maneuver_navigation.cpp  maneuver_navigation.h  mobidik_collection_navigation.cpp  mobidik_collection_navigation.h  route_navigation.cpp  route_navigation.h  route_navigation_defines.h  simplified_world_model.cpp  simplified_world_model.h  waypoint_navigation.cpp  waypoint_navigation.h
route_navigation/yaml_cmds/: collect_mobidik.yaml  elevator_cmd.yaml  path_demo.yaml  pause_cmd.yaml  resume_cmd.yaml
route_navigation/yaml_cmds/actions_brsu/: navigation_action_C022.yaml  navigation_action_C022_elevator.yaml  navigation_action_ground_floor_infomatic_full_circle.yaml
route_navigation/yaml_cmds/actions_hospital/: action1.yaml  action2.yaml  action3.yaml  action4.yaml  action4_left.yaml  action5.yaml  action5_left.yaml  collect_mobidik.yaml  elevator_navigation.yaml  release_mobidik.yaml
route_navigation/yaml_cmds/testTUe_RLAL_hallway/: elevator_navigation.yaml  goto_charging_station_Alldata.yaml  goto_collect_mobidik_Alldata.yaml  goto_deliver_mobidik_Alldata.yaml  release_mobidik.yaml
route_planner/: CMakeLists.txt  README.md  package.xml
route_planner/include/route_planner/: napoleon_driving_planner.hpp  osm_sub_areas_route_planner.hpp  osm_waypoints_route_planner.hpp  route_planner.hpp  simple_osm_route_planner.hpp
route_planner/launch/: route_planner.launch
route_planner/src/: napoleon_driving_planner.cpp  osm_sub_areas_route_planner.cpp  osm_waypoints_route_planner.cpp  route_planner.cpp  route_planner_node.cpp  simple_osm_route_planner.cpp
route_planner/test/: route_planner_test.cpp  route_planner_test_amk.cpp  route_planner_test_brsu.cpp  route_planner_test_hochschulestrasse_return.cpp  route_planner_visualizer.cpp
