<?xml version="1.0"?>
<package>
  <name>route_navigation</name>
  <version>0.0.0</version>
  <description>The route_navigation package</description>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <author email="dharmingeo@gmail.com">Dharmin Bakaraniya</author>
  <author email="c.a.lopez.martinez@tue.nl">Cesar Lopez Martinez</author>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</maintainer>
  <maintainer email="dharmingeo@gmail.com">Dharmin Bakaraniya</maintainer>
  <maintainer email="c.a.lopez.martinez@tue.nl">Cesar Lopez Martinez</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ropod_ros_msgs</build_depend>
  <build_depend>maneuver_navigation</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>ropod_ros_msgs</run_depend>
  <run_depend>maneuver_navigation</run_depend>

  <export>
  </export>
</package>
